--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "motion": "^12.12.1",
     "react": "^19.1.0",
