--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -24,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "node-tesseract-ocr": "^2.2.1",
-    "pdf2pic": "^3.1.4"
+    "pdf2pic": "^3.1.4",
+    "validator": "^13.15.15"
   }
 }
